# uma_robotics_2026

./: .gitignore  README.md  requirements.txt
Chapter 01. Welcome/: 1.1 Course presentation.ipynb
Chapter 02. Probability and statistic bases/: 2.1 Probability and Statistics Bases for Robotics.ipynb
Chapter 03. Robot motion/: 3.1 Motion through pose composition.ipynb  3.2 Velocity-based motion model.ipynb  3.3 Odometry-based motion model.ipynb
Chapter 04. Robot sensing/: 4.1 Landmark-based models.ipynb  4.2 Laser Scanner.ipynb  4.3 Playing with ROS2.ipynb
Chapter 05. Localization/: 5-Localization-2-EKF.ipynb  5-Localization-3-ParticleFilter.ipynb  5-Localization-4-AMCL in ROS2.ipynb
Chapter 05. Localization/laserUtils/: LaserUtils.py
Chapter 06. Mapping/: 6.1 Introduction to mapping.ipynb  6.3 Occupancy grid map building.ipynb
Chapter 07. SLAM/: 7.1 Introduction to SLAM.ipynb  7.3 Pose Graph SLAM.ipynb  7.4 ROS2 SLAM Demo.ipynb
Chapter 07. SLAM/laserUtils/: LaserUtils.py
Chapter 09. Robot control architecture/: 9.1 Experiencing ROS2.ipynb
robotics_ws/: .clang-format  .clangd  Readme.md
robotics_ws/src/keyboard_control/: CMakeLists.txt  README.md  package.xml
robotics_ws/src/keyboard_control/launch/: Keyboard_control_launch.py  keyboard_control.launch
robotics_ws/src/keyboard_control/src/: keyboard_control.cpp  keyboard_control_plus.cpp
robotics_ws/src/odom_simulator/: CMakeLists.txt  package.xml
robotics_ws/src/odom_simulator/src/: Utils.hpp  odom_node.cpp
utils/: DrawRobot.py  RemapRange.py  tcomp.py
utils/laser/: laser2D.py
utils/unit7/: occupancy_mapping.py
(+18 files in other folders)
